# realistic-library-hallucinations

./: .gitignore  .pre-commit-config.yaml  README.md  data.ipynb  main.ipynb  pyproject.toml  requirements.dev  requirements.in  requirements.txt
.github/workflows/: check.yaml
benchmark/: LibraryHalluBench.json  README.md  cli.py  evaluate.py  example_responses_gpt5mini.json
data/: bcb_queried_libraries.json  bcb_tasks_test.json  bcb_tasks_tune.json
data/bigcodebench/: bcb_parts.json  bcb_tasks_eval.json  bcb_tasks_full.json  bcb_tasks_test.json  bcb_tasks_tune.json  bigcodebench.ipynb  bigcodebench.json  bigcodebench_eval.json  bigcodebench_full.json  bigcodebench_raw.json  bigcodebench_test.json  bigcodebench_tune.json
data/pypi/: pypi.ipynb
notebooks/: bigcodebench.ipynb  clustering.ipynb  create_benchmark.ipynb  download_documentation.ipynb  download_python_libraries.ipynb  generate_clusters.ipynb  generate_fabrications.ipynb  library_documentation.ipynb  merge_results.ipynb  process_bigcodebench.ipynb  pypi_packages.ipynb  query_names.ipynb  query_stackexchange.ipynb  stackexchange.ipynb
prototype/: fix_with_summary.ipynb  hallucination_attack.ipynb  harness_hallucinations.ipynb
run/: data.ipynb  stackexchange.ipynb
src/: __init__.py  check_library.py  cli.py  constants.py  evaluate.py  experiment.py  generate.py  get_libraries.py  mitigation.py  packages.py  prompts.py  run_base.py  run_control.py  run_describe.py  run_specify.py  run_temporal.py  run_vary.py
tests/: conftest.py  test_check_libraries.py  test_check_members.py  test_libraries.py  test_libraries_format.py  test_libraries_load.py
(+17 files in other folders)
